# agentic-research-assistant

./: .gitignore  README.md  pyproject.toml
outputs/sample_runs/: 47890e85_20251224_010719.json  47890e85_20251224_010719_report.md
scripts/: compare_baseline_vs_agentic.py  run_local.py
src/ara/: __init__.py
src/ara.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ara/agents/: critic.py  decider.py  planner.py  researcher.py
src/ara/api/: app.py  schemas.py
src/ara/baselines/: single_agent.py
src/ara/core/: policies.py  runner.py  state.py  tracing.py
src/ara/tools/: citations.py  web_search.py
tests/: test_state_machine.py
